crates/wt-agent-git/tests/snapshots/hints__checkout_hint.snap
---
source: crates/wt-agent-git/tests/hints.rs
expression: "stderr(run_hint(temp.path(), \"checkout\"))"
---
WT: This is a WT-managed development environment for a coding agent.
WT: For safety, the developer's SSH keys and GitHub or GitLab credentials are
WT: not available here. Do not look for credentials or use gh or glab.
WT: WT gives you scoped access to project group/project.
WT: Use normal Git for commits, fetches, pulls, and pushes. Every WT world for
WT: this project can write branches under wt/. Pull or merge requests target main.
WT: ag-git uses explicit provider resource types and IDs; it does not infer
WT: resources from the current checkout.
WT: Run ag-git --help to discover every available command.
WT:
WT: Branches pushed from a WT world must start with wt/.
WT: Rename the current branch before pushing:
WT:   git branch -m wt/fix-name
